--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Features:</h2>
         <div class="feature">
             <h3>Feature 1</h3>
-            <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)</p>
+            <p>Fackin lav it, Mate. Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)</p>
         </div>
         <div class="feature">
             <h3>Feature 2</h3>
@@ -55,5 +55,38 @@
     </section>
     <!----/.features-->
 
+    <section class="favourites">
+    <h1>Monthly Favourites</h1>
+    <table class="table table-striped table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Origin</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Sauvignon Blanc</td>
+      <td>New Zealand</td>
+    </tr>
+    <tr>
+      <td>Malbec</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <td>Pinot Noir</td>
+      <td>France</td>
+    </tr>
+    <tr>
+      <td>Chenin Blanc</td>
+      <td>France</td>
+    </tr>
+    <tr>
+      <td>Cabernet Sauvignon</td>
+      <td>Australia</td>
+    </tr>
+  </tbody>
+</table>
+    </section>
 </body>
 </html>
