core-css-grid-system

--- a/index.html
+++ b/index.html
@@ -11,91 +11,121 @@
 </head>
 
 <body>
-<article class="container">
-    <!-- Callout -->
-    <section class="callout" >
-        <h1 >The finest wines delivered to your doorstep.</h1>
-        <p class="lead">Sign up today to start receiving the world's best wines every month for just <s>£29.99!</s> <strong> <mark> The first delivery is free!</mark></strong> </p>
-        <p ><small class="text-muted"> Customers must be over 18. Please drink responsibly. </small></p>
-        <button type="button" class="btn btn-success">Click Here!</button>
-    </section>
-    <!----/.callout-->
-    <hr>
-
-    <!-- Quotes -->
-    <section class="quotes">
-        <h2 class="text-uppercase">Quotes:</h2>
-        <blockquote class="blockquote">
-            <p>"I've learnt so much about good wines - life-changing!"</p>
-            <p>- Sarah Jane</p>
-        </blockquote>
-        <blockquote class="blockquote">
-            <p>"It's taken all the effort out of choosing an exceptional wine!"</p>
-            <p>- Jane Doe</p>
-        </blockquote>
-        <blockquote class="blockquote">
-            <p>"It's like Christmas every month!"</p>
-            <p>- Richard B</p>
-        </blockquote>
-    </section>
-    <!----/.quotes-->
-    <hr>
-
-    <!-- Features -->
-    <section class="feature">
-        <h2 class="text-uppercase">Features:</h2>
-        <div class="feature">
-            <h3>Feature 1</h3>
-            <p>Fackin lav it, Mate. Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
-            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-            
+    <article class="container">
+        <!-- Callout -->
+        <div class="row">
+            <div class="col-12">
+                <section class="callout" >
+                    <h1 >The finest wines delivered to your doorstep.</h1>
+                    <p class="lead">Sign up today to start receiving the world's best wines every month for just
+                        <s>£29.99!</s> <strong> <mark> The first delivery is free!</mark></strong> </p>
+                    <button type="button" class="btn btn-success">Click Here!</button>
+                    <p class="text-muted"><small> Customers must be over 18. Please drink responsibly. </small></p>
+                </section>
+            </div>
         </div>
-        <div class="feature">
-            <h3>Feature 2</h3>
-            <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-        </div>
-        <div class="feature">
-            <h3>Feature 3</h3>
-            <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-        </div>
-    </section>
-    <!----/.features-->
+        <!----/.callout-->
+        <hr>
 
-    <section class="favourites">
-    <h1>Monthly Favourites</h1>
-    <table class="table table-striped table-dark">
-  <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Origin</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Sauvignon Blanc</td>
-      <td>New Zealand</td>
-    </tr>
-    <tr>
-      <td>Malbec</td>
-      <td>Spain</td>
-    </tr>
-    <tr>
-      <td>Pinot Noir</td>
-      <td>France</td>
-    </tr>
-    <tr>
-      <td>Chenin Blanc</td>
-      <td>France</td>
-    </tr>
-    <tr>
-      <td>Cabernet Sauvignon</td>
-      <td>Australia</td>
-    </tr>
-  </tbody>
-</table>
-    </section>
+        <!-- Quotes -->
+        <section class="quotes">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Quotes:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <blockquote class="blockquote">
+                        <p>"I've learnt so much about good wines - life-changing!"</p>
+                        <p>- Sarah Jane</p>
+                    </blockquote>
+                </div>
+                <div class="col-12 col-md-4">
+                    <blockquote class="blockquote">
+                        <p>"It's taken all the effort out of choosing an exceptional wine!"</p>
+                        <p>- Jane Doe</p>
+                    </blockquote>
+                </div>
+                <div class="col-12 col-md-4">
+                    <blockquote class="blockquote">
+                        <p>"It's like Christmas every month!"</p>
+                        <p>- Richard B</p>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+        <!----/.quotes-->
+        <hr>
+
+        <!-- Features -->
+        <section class="feature">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Features:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">    
+                    <div class="feature">
+                        <h3>Feature 1</h3>
+                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
+                            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 2</h3>
+                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+                            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
+                    </div>
+                </div>
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 3</h3>
+                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+                        <button type="button" class="btn btn-light btn-sm">Read More</button></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!----/.features-->
+
+
+        <section class="favourites">
+            <h1>Monthly Favourites</h1>
+            <table class="table table-striped table-dark">
+                <thead>
+                    <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Origin</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Sauvignon Blanc</td>
+                        <td>New Zealand</td>
+                    </tr>
+                    <tr>
+                        <td>Malbec</td>
+                        <td>Spain</td>
+                    </tr>
+                    <tr>
+                        <td>Pinot Noir</td>
+                        <td>France</td>
+                    </tr>
+                    <tr>
+                        <td>Chenin Blanc</td>
+                        <td>France</td>
+                    </tr>
+                    <tr>
+                        <td>Cabernet Sauvignon</td>
+                        <td>Australia</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </article>
 </body>
 </html>
