--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p>- Jane Doe</p>
                     </blockquote>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="d-none d-md-block col-md-4">
                     <blockquote class="blockquote">
                         <p>"It's like Christmas every month!"</p>
                         <p>- Richard B</p>
