--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <article class="container">
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+    <a href="#" class="navbar-brand">Wine Drop</a>
+    <ul class="navbar-nav mr-auto">
+        <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In/ Sign Up</a></li>
+    </ul>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"><i>World-class wine delivered to your door!</i></p>
+            <a href="/login">Sign In/ Sign Up</a>
+        </div>
+    </nav>
+    <article class="container mt-3">
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout" >
+                <section class="callout jumbotron text-center">
                     <h1 >The finest wines delivered to your doorstep.</h1>
                     <p class="lead">Sign up today to start receiving the world's best wines every month for just
-                        <s>£29.99!</s> <strong> <mark> The first delivery is free!</mark></strong> </p>
-                    <button type="button" class="btn btn-success">Click Here!</button>
-                    <p class="text-muted"><small> Customers must be over 18. Please drink responsibly. </small></p>
+                        <s class="d-none d-sm-inline">£29.99!</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>The first delivery is free!</mark></strong></p>
+                    <button type="button" class="btn btn-success">Sign Up!</button>
+                    <p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
                 </section>
             </div>
         </div>
@@ -30,7 +43,7 @@
         <!-- Quotes -->
         <section class="quotes">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 my-5">
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>
             </div>
@@ -61,12 +74,12 @@
         <!-- Features -->
         <section class="feature">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 my-5">
                     <h2 class="text-uppercase">Features:</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">    
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
                         <h3>Feature 1</h3>
                         <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
@@ -90,10 +103,10 @@
             </div>
         </section>
         <!----/.features-->
-
-
-        <section class="favourites">
-            <h1>Monthly Favourites</h1>
+        <hr>
+        
+        <section class="favourites my-5">
+            <h1 class="text-uppercase">Monthly Favourites</h1>
             <table class="table table-striped table-dark">
                 <thead>
                     <tr>
