--- a/index.html
+++ b/index.html
@@ -1,113 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wine Drop | Taste a new selection of wines every month</title>
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Wine Drop | The Finest Wines Available to Humanity</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/490ea72588.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-light bg-light navbar-expand-sm">
-    <a href="#" class="navbar-brand">Wine Drop</a>
-    <ul class="navbar-nav mr-auto">
-        <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In/ Sign Up</a></li>
-    </ul>
-        <div class="d-none d-md-block">
-            <p class="navbar-text my-auto mr-2"><i>World-class wine delivered to your door!</i></p>
-            <a href="/login">Sign In/ Sign Up</a>
-        </div>
-    </nav>
-    <article class="container mt-3">
-        <div class="row">
-            <div class="col-12">
-                <div class="alert alert-warning"><strong>Sale now on!</strong> Sign up for 12 months and get 50% off- Limited time only <a href="/">See here for deatils</a></div>
-            </div>
-        </div>
-        <!-- Callout -->
-        <div class="row">
-            <div class="col-12">
-                <section class="callout jumbotron text-center">
-                    <h1 >The finest wines delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best wines every month for just
-                        <s class="d-none d-sm-inline">£29.99!</s>
-                        <span class="d-inline d-sm-none"><br></span>
-                        <strong><mark>The first delivery is free!</mark></strong></p>
-                    <button type="button" class="btn btn-success">Sign Up!</button>
-                    <p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
-                </section>
-            </div>
-        </div>
-        <!----/.callout-->
-        <hr>
+	<nav class="navbar navbar-light bg-light navbar-expand-sm">
+		<a href="#" class="navbar-brand">Wine Drop</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+				<li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Wines
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">France</a>
+						<a class="dropdown-item" href="#">Italy</a>
+						<a class="dropdown-item" href="#">Spain</a>
+						<a class="dropdown-item" href="#">Australia</a>
+						<a class="dropdown-item" href="#">New Zealand</a>
+					</div>
+				</li>
+				<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In/ Sign Up</a></li>
+			    </ul>
+		</div>
+			<div class="d-none d-md-block">
+				<p class="navbar-text my-auto mr-2"><i>The Finest Wines Available to Humanity, here and now.</i></p>
+				<a href="/login">Sign In/ Sign Up</a>
+			</div>
+	</nav>
+	<article class="container mt-3">
+		<div class="row">
+			<div class="col-12">
+				<div class="alert alert-warning"><strong>Sale now on!</strong> Sign up for 12 months and get 50% off-
+					Limited time only <a href="/">See here for deatils</a></div>
+			</div>
+		</div>
+		<!-- Callout -->
+		<div class="row">
+			<div class="col-12">
+				<section class="callout jumbotron text-center">
+					<h1>The Finest Wines delivered to your doorstep.</h1>
+					<p class="lead">Sign up today to start receiving the Finest Wines for just
+						<s>£39.99</s> a month.
+						<br>
+						<strong><mark>The first delivery is free!</mark></strong></p>
+					<button type="button" class="btn btn-success">Sign Up!</button>
+					<p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
+				</section>
+			</div>
+		</div>
+		<!----/.callout-->
+		<hr>
 
-        <!-- Quotes -->
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Quotes:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100 alt="girl-image">
+		<!-- Quotes -->
+		<section class="quotes">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Quotes:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="media">
+						<div class="d-none d-sm-block">
+							<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100" alt="girl customer image">
                         </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>"I've learnt so much about good wines - life-changing!"</p>
-                                <p>- Sarah Jane</p>
-                            </blockquote>
+							<div class="media-body">
+								<blockquote class="blockquote">
+									<p>"I haven't been sober for months! life-changing."</p>
+									<p>- Sarah Jane</p>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="media">
+							<div class="d-none d-sm-block">
+								<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100" alt="guy customer image">
                         </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100 alt="guy-image">
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>"It's taken all the effort out of choosing an exceptional wine!"</p>
-                                <p>- Richard B</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="d-none d-lg-block col-lg-4">
-                    <div class="media">
-                        <img src="images/geek-image.png" class="rounded-circle mr-3" height=100 width=100 alt="geek-image">
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>"It's like Christmas every month!"</p>
-                                <p>- Jane Doe</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!----/.quotes-->
-        <hr>
+								<div class="media-body">
+									<blockquote class="blockquote">
+										<p>"I don't even have to think about what I'm drinking- I just pick up a bottle whenever I feel like it and it's always delicious."</p>
+										<p>- Richard B</p>
+									</blockquote>
+								</div>
+							</div>
+						</div>
 
-        <!-- Features -->
-        <section class="feature">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!<span></h3>
+						<div class="d-none d-lg-block col-lg-4">
+							<div class="media">
+								<img src="images/geek-image.png" class="rounded-circle mr-3" height="100" width="100" alt="geek customer image">
+								<div class="media-body">
+									<blockquote class="blockquote">
+										<p>"It's like Christmas every month!"</p>
+										<p>- Jane Doe</p>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+					</div>
+		</section>
+		<!----/.quotes-->
+		<hr>
+
+		<!-- Features -->
+		<section class="feature">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Features:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                         <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
                             <button type="button" class="btn btn-light btn-sm">Read More</button></p>
                     </div>
@@ -140,22 +161,17 @@
                     <th scope="col">Origin</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     <tr>
                         <td>Sauvignon Blanc</td>
                         <td>New Zealand</td>
                     </tr>
                     <tr>
-                        <td>Malbec</td>
+                        <td>Rioja</td>
                         <td>Spain</td>
                     </tr>
                     <tr>
-                        <td>Pinot Noir</td>
-                        <td>France</td>
-                    </tr>
-                    <tr>
-                        <td>Chenin Blanc</td>
+                        <td>Chateauneuf-du-Pape</td>
                         <td>France</td>
                     </tr>
                     <tr>
@@ -166,5 +182,8 @@
             </table>
         </section>
     </article>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
