--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Wine Drop | The Finest Wines Available to Humanity</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/490ea72588.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
-    <script src="https://kit.fontawesome.com/490ea72588.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+	<!--navbar-->
 	<nav class="navbar navbar-light bg-light navbar-expand-sm">
 		<a href="#" class="navbar-brand">Wine Drop</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-        
+
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
@@ -36,38 +39,49 @@
 					</div>
 				</li>
 				<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In/ Sign Up</a></li>
-			    </ul>
+			</ul>
 		</div>
-			<div class="d-none d-md-block">
-				<p class="navbar-text my-auto mr-2"><i>The Finest Wines Available to Humanity, here and now.</i></p>
-				<a href="/login">Sign In/ Sign Up</a>
-			</div>
+		<div class="d-none d-md-block">
+			<p class="navbar-text my-auto mr-2"><i>The Finest Wines Available to Humanity, here and now.</i></p>
+			<a href="/login">Sign In/ Sign Up</a>
+		</div>
 	</nav>
-	<article class="container mt-3">
+
+	<!--/navbar-->
+
+	<!--alert-->
+	<!-- <div class="container alert-container">
 		<div class="row">
 			<div class="col-12">
 				<div class="alert alert-warning"><strong>Sale now on!</strong> Sign up for 12 months and get 50% off-
 					Limited time only <a href="/">See here for deatils</a></div>
 			</div>
 		</div>
-		<!-- Callout -->
+	</div> -->
+	<!--/alert-->
+
+	<!-- Callout -->
+	<div class="container-fluid callout-container">
+		<div class="opaque-overlay">&nbsp</div>
 		<div class="row">
 			<div class="col-12">
 				<section class="callout jumbotron text-center">
-					<h1>The Finest Wines delivered to your doorstep.</h1>
-					<p class="lead">Sign up today to start receiving the Finest Wines for just
-						<s>£39.99</s> a month.
-						<br>
-						<strong><mark>The first delivery is free!</mark></strong></p>
-					<button type="button" class="btn btn-success">Sign Up!</button>
+					<h1 class="jumbotron-header">The finest wines delivered to your doorstep.</h1>
+					<hr class="block-divider">
+					<p class="lead">Sign up today to start receiving humanity's finest wines every month.
+						<s>£39.99</s>
+						<span class="d-inline d-sm-none"><br></span>
+						<strong><mark>first one is free!</mark></strong></p>
+					<button type="button" class="btn btn-lg btn--cta btn--purple">Sign Up!</button>
 					<p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
 				</section>
 			</div>
 		</div>
-		<!----/.callout-->
-		<hr>
+	</div>
+	<!--/callout-->
 
-		<!-- Quotes -->
+	<!-- Quotes -->
+	<div class="container quotes-container">
 		<section class="quotes">
 			<div class="row">
 				<div class="col-12 my-5">
@@ -95,7 +109,9 @@
                         </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
-										<p>"I don't even have to think about what I'm drinking- I just pick up a bottle whenever I feel like it and it's always delicious."</p>
+										<p>"I don't even have to think about what I'm drinking- I just pick up a
+											bottle
+											whenever I feel like it and it's always delicious."</p>
 										<p>- Richard B</p>
 									</blockquote>
 								</div>
@@ -115,10 +131,11 @@
 						</div>
 					</div>
 		</section>
-		<!----/.quotes-->
-		<hr>
+	</div>
+	<!----/.quotes-->
 
-		<!-- Features -->
+	<!-- Features -->
+	<div class="container features-container">
 		<section class="feature">
 			<div class="row">
 				<div class="col-12 my-5">
@@ -128,62 +145,80 @@
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="feature">
-						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
-                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
-                            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-                            <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-                    </div>
-                </div>
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-                        <p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it all is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-                        <button type="button" class="btn btn-light btn-sm">Read More</button></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!----/.features-->
-        <hr>
-        
-        <section class="favourites my-5">
-            <h1 class="text-uppercase">Monthly Favourites</h1>
-            <table class="table table-striped table-dark">
-                <thead>
-                    <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Origin</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Sauvignon Blanc</td>
-                        <td>New Zealand</td>
-                    </tr>
-                    <tr>
-                        <td>Rioja</td>
-                        <td>Spain</td>
-                    </tr>
-                    <tr>
-                        <td>Chateauneuf-du-Pape</td>
-                        <td>France</td>
-                    </tr>
-                    <tr>
-                        <td>Cabernet Sauvignon</td>
-                        <td>Australia</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </article>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+							<span class="badge badge-success">NEW!</span></h3>
+						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+							all
+							is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
+							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+							all
+							is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+					</div>
+				</div>
+				<div class="col-12 d-md-none d-lg-block col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+							all
+							is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!----/.features-->
+	</div>
+
+	<!--favourites-->
+	<div class="container favourites-container">
+		<section class="favourites my-5">
+			<h1 class="text-uppercase">Monthly Favourites</h1>
+			<table class="table table-striped table-dark">
+				<thead>
+					<tr>
+						<th scope="col">Name</th>
+						<th scope="col">Origin</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Sauvignon Blanc</td>
+						<td>New Zealand</td>
+					</tr>
+					<tr>
+						<td>Rioja</td>
+						<td>Spain</td>
+					</tr>
+					<tr>
+						<td>Chateauneuf-du-Pape</td>
+						<td>France</td>
+					</tr>
+					<tr>
+						<td>Shiraz</td>
+						<td>Australia</td>
+					</tr>
+				</tbody>
+			</table>
+		</section>
+	</div>
+	<!--/favourites-->
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </body>
+
 </html>
