sign up button navbar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="d-none d-md-block">
 				<p class="navbar-text my-auto mr-2"><i>The finest wines available to humanity; here and now.</i></p>
-				<a href="/login">Sign In/ Sign Up</a>
+				<a href="/login" class="btn btn--cta btn--purple">Sign In/ Sign Up</a>
 			</div>
 		</nav>
 	</div>
